<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:gravity="center">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:id="@+id/sv_info">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/tv_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dTitle"
                android:id="@+id/tv_title_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:id="@+id/tv_Year"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dYear"
                android:id="@+id/tv_Year_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/tv_Rating"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dRating"
                android:id="@+id/tv_Rating_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/tv_RunTime"
                android:layout_alignParentStart="true"
                android:layout_marginTop= "10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dTime"
                android:id="@+id/tv_RunTime_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop= "10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:id="@+id/tv_Plot"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dPlot"
                android:id="@+id/tv_Plot_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awards"
                android:id="@+id/tv_Awards"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dAwards"
                android:id="@+id/tv_Awards_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mScore"
                android:id="@+id/tv_MetaScore"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dMScore"
                android:id="@+id/tv_MetaScore_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdbScore"
                android:id="@+id/tv_IMDBScore"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimdbScore"
                android:id="@+id/tv_IMDBScore_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/cancel"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Close"
            />

    </LinearLayout>


</LinearLayout>