<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name:"
        android:layout_marginTop="30dp"
        android:focusableInTouchMode="true"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Movie Title"
        android:layout_marginTop="10dp"
        android:id="@+id/et_entry"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_search"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show History"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_History"/>
    <FrameLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/layout"></FrameLayout>
    <FrameLayout
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/data"></FrameLayout>
    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/pb_loading_movie"
        android:visibility="invisible"
        android:indeterminate="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:id="@+id/sv_info">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/tv_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dTitle"
                android:id="@+id/tv_title_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:id="@+id/tv_Year"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dYear"
                android:id="@+id/tv_Year_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/tv_Rating"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dRating"
                android:id="@+id/tv_Rating_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/tv_RunTime"
                android:layout_alignParentStart="true"
                android:layout_marginTop= "10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dTime"
                android:id="@+id/tv_RunTime_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop= "10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:id="@+id/tv_Plot"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dPlot"
                android:id="@+id/tv_Plot_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/awards"
                android:id="@+id/tv_Awards"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dAwards"
                android:id="@+id/tv_Awards_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mScore"
                android:id="@+id/tv_MetaScore"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dMScore"
                android:id="@+id/tv_MetaScore_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imdbScore"
                android:id="@+id/tv_IMDBScore"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimdbScore"
                android:id="@+id/tv_IMDBScore_text"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
